syntax = "proto3";

option csharp_namespace = "PriceGrpcService";

package price;

service PriceProvider{
	rpc GetBasePrice(PriceRequest) returns (PriceReply);
	rpc GetRealTimePrices(PriceRequest) returns(stream PriceReply);
}

message PriceRequest{
int32 id =1;
}

message PriceReply{
	int32 id = 1;
	string price = 2;
}